# opera

./: .gitignore  CLAUDE.md  README.md  dev-handoff.md  docker-compose.yml  handoff.md  skills-lock.json  start-backend.ps1  start-backend.sh
.github/workflows/: ci.yml
docs/: CLAUDE_CHATGPT_PROVIDER_PLAN.md  CONTENT_REWRITE_IMPROVEMENT_PLAN.md  DEPLOYMENT.md  INDEX.md  PLAN.md  PROJECT.md  REVIEW.md  XHS_COMPOSER_LAYOUT_IMAGE_PLAN.md  dev-tasks.html  product-ux-review.html
docs/archive/: HANDOFF-FASTAPI.md  README.md  handoff.md
docs/features/: README.md
feature-wechat-composer/: PRD.md
feature-xhs-composer/: PRD.md
opera-app/: .dockerignore  DESIGN.md  Dockerfile  README.md  index.html  nginx.conf  package.json
opera-app/src/: App.tsx  constants.ts  index.css  types.ts
opera-app/src/components/: Caption.tsx  CopyButton.tsx  CoverTitles.tsx  ExtractionPointsPanel.tsx  HashtagGroups.tsx  Header.tsx  ProgressIndicator.tsx  ProviderSelector.tsx  SlideCards.tsx  TabNav.tsx  (+3 more)
opera-server/: .env.example  package.json
opera-server-py/: .dockerignore  .env.example  Dockerfile  pyproject.toml
opera-server-py/app/: config.py  main.py  prompts.py  prompts_composer.py  prompts_wechat.py  sse.py  types.py  utils.py
opera-server-py/app/providers/: anthropic_provider.py  base.py  factory.py  openai_compat_provider.py
opera-server-py/app/routes/: compose.py  generate.py  wechat_compose.py
opera-server-py/scripts/: test_e2e.py
opera-server-py/tests/: test_api_contract.py  test_utils.py
opera-server/src/: config.ts  index.ts  prompts.ts  types.ts
(+23 files in other folders)
