[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opera-server-py"
version = "0.1.0"
description = "Default FastAPI backend for Opera, compatible with the existing frontend SSE contract"

requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "python-dotenv>=1.0,<2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
